--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=order-service
+
+spring.data.cassandra.contact-points=127.0.0.1
+spring.data.cassandra.port=9042
+spring.data.cassandra.keyspace-name=orderskeyspace
+spring.data.cassandra.schema-action=create-if-not-exists
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=order-service-group
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
